--- a/src/assets/css/sections/hero/_hero-right.scss
+++ b/src/assets/css/sections/hero/_hero-right.scss
@@ -141,6 +141,7 @@
     clip-path: url(#hero-mask);
     width: 97.3%;
     height: 103.31%;
+    overflow: hidden;
 
     .me {
       width: 84.25%;
